# python_fastapi_poetry

./: .env  .gitignore  README.md  pyproject.toml
.github/workflows/: docker-image.yml  docker-publish.yml
app/src/: config.py  logging.conf  main.py
app/src/api/: actuators.py  admin.py  users.py
app/src/config/: config.py
app/src/redis_db/: redis.py
app/src/service_logic/: crud.py
app/src/sql_db/: connection.py  database.py  models.py
app/tests/: loadtest.sh  urls.txt
deploy/docker/: .env  Dockerfile  docker-compose.yml
deploy/helm/py_fastapi_poetry/: Chart.yaml
deploy/helm/py_fastapi_poetry/templates/: NOTES.txt  deployment.yaml  hpa.yaml  ingress.yaml  serviceaccount.yaml
deploy/helm/py_fastapi_poetry/templates/tests/: test-connection.yaml
docker/: .env  Dockerfile  docker-compose.yml
helm/py_fastapi_poetry/: Chart.yaml  values.yaml
helm/py_fastapi_poetry/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
