[tool.poetry]
name = "python-fastapi-poetry"
version = "0.1.0"
description = ""
authors = ["jn245147 <jaime.x.navarrosantapau@gsk.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.44"
pymysql = "^1.0.2"
redis = "^4.4.0"
python-decouple = "^3.6"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
